<resources>
    <string name="app_name">MathematicsForImprovement</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_accaunt">Аккаунт</string>
    <string name="menu_author_tasks">Авторские задачи</string>
    <string name="menu_community_tasks">Задачи от сообщества</string>
    <string name="menu_bookmarks">Закладки</string>
    <string name="out">Выйти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gotIt">Понял</string>
    <string name="Answer">Ответ</string>
    <string name="sendAnswer">Ответить</string>
    <string name="giveUp">сдатся</string>
    <string name="Discription">Описание</string>
    <string name="YouSure">Правельный ответ!</string>
    <string name="YouNotSure">Не правельный ответ, правельный ответ -      </string>
    <string name="nextTask">следующая задача</string>
</resources>