<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_task_author">

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.mathematicsforimprovement.ui.account.AccountFragment"
        android:label="@string/menu_accaunt"
        tools:layout="@layout/fragment_task_author" />

    <fragment
        android:id="@+id/nav_task_author"
        android:name="com.example.mathematicsforimprovement.ui.task_author.Task_authorFragment"
        android:label="@string/menu_author_tasks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/nav_task_community"
        android:name="com.example.mathematicsforimprovement.ui.task_community.Task_communityFragment"
        android:label="@string/menu_community_tasks"
        tools:layout="@layout/fragment_task_community" />
    <fragment
        android:id="@+id/nav_bookmarks"
        android:name="com.example.mathematicsforimprovement.ui.bookmarks.BookmarksFragment"
        android:label="@string/menu_community_tasks"
        tools:layout="@layout/fragment_task_community" />
</navigation>